# SimpleRenderEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: SreTest.cmake  SreUtils.cmake
examples/: .CMakeLists.txt.swp  08_gui.cpp  15_cloth_simulation.cpp  18_FPS-camera.cpp  19_Flight-camera.cpp  CMakeLists.txt
include/sre/: Camera.hpp  Color.hpp  Framebuffer.hpp  ImGuiAddOn.hpp  Inspector.hpp  Light.hpp  Log.hpp  Mesh.hpp  RenderPass.hpp  Renderer.hpp  SDLRenderer.hpp  Shader.hpp  Sprite.hpp  Texture.hpp  VR.hpp  imgui_addon.hpp
include/sre/impl/: CPPShim.hpp  GL.hpp
libraries/: README.md
libraries/SDL2-2.26.2/cmake/: sdl2-config.cmake
libraries/SDL2-2.26.2/lib/x64/: SDL2main.lib
libraries/glew-2.2.0-EGL/lib/: libGLEW.so.2.2.0
regression_tests/: CMakeLists.txt
regression_tests/FPS-camera/: CMakeLists.txt  FPS-camera.cpp  test.ui_events
regression_tests/benchmark64k-heavy/: CMakeLists.txt
regression_tests/bumpmap/: CMakeLists.txt
regression_tests/custom-mesh-layout-default-values/: CMakeLists.txt
regression_tests/custom-mesh-layout-ints/: CMakeLists.txt
regression_tests/deallocation/: CMakeLists.txt
regression_tests/gamma/: CMakeLists.txt
regression_tests/imgui-color-test/: CMakeLists.txt
regression_tests/imgui-demo-test/: CMakeLists.txt
regression_tests/matrix-uniforms/: CMakeLists.txt  matrix-uniforms.cpp
regression_tests/multi-cameras/: CMakeLists.txt
regression_tests/multiple-lights/: CMakeLists.txt  multiple-lights.cpp
regression_tests/multiple-materials/: CMakeLists.txt
regression_tests/particle-sprite/: CMakeLists.txt  particle-sprite.cpp
regression_tests/particle-test/: CMakeLists.txt  particle-test.cpp
regression_tests/pbr-test/: CMakeLists.txt
regression_tests/polygon-offset-example/: CMakeLists.txt
regression_tests/primitives-test/: CMakeLists.txt
regression_tests/render-depth/: CMakeLists.txt
regression_tests/screen-point-to-ray/: CMakeLists.txt
regression_tests/set-icon/: CMakeLists.txt
regression_tests/shadow-test/: CMakeLists.txt
regression_tests/spinning-sphere-cubemap/: CMakeLists.txt  spinning-sphere-cubemap.cpp
regression_tests/sprite-test/: CMakeLists.txt
regression_tests/static_vertex_attribute/: CMakeLists.txt
regression_tests/stencil_test/: CMakeLists.txt
regression_tests/texture-test/: CMakeLists.txt
regression_tests/update_shader/: CMakeLists.txt  update_shader.cpp
src/: CMakeLists.txt
src/sre/: Camera.cpp  Color.cpp  Framebuffer.cpp  ImGuiAddOn.cpp  Inspector.cpp  Log.cpp  Mesh.cpp  ModelImporter.cpp  RenderPass.cpp  Renderer.cpp  SDLRenderer.cpp  Shader.cpp  Texture.cpp  VR.cpp  WorldLights.cpp  imgui_addon.cpp  imgui_sre.cpp
submodules/: CMakeLists.txt
unit_tests/: CMakeLists.txt
